--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="vendor/magenta/music-1.3.1.js"></script>
-    <script src="helpers.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="assets/js/helpers.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
   </head>
   <body>
     <div class="splash">
