--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
     </div>
     <script type="text/javascript" src="vendor/magenta/music-1.3.1.js"></script>
+    <script type="text/javascript" src="vendor/i18n4js/i18n4js-1.3.1.min.js"></script>
     <script type="text/javascript" src="assets/js/dependencies.min.js"></script>
     <script type="text/javascript" src="assets/js/bundle.min.js"></script>
   </body>
