--- a/src/pug/sections/main.html
+++ b/src/pug/sections/main.html
@@ -4,16 +4,24 @@
   <svg id="svg"></svg>
 
   <div class="controls" id="controls">
-    <button class="color color-0" id="btn0" data-id="0"><span></span></button>
-    <button class="color color-1" id="btn1" data-id="1"><span></span></button>
-    <button class="color color-2" id="btn2" data-id="2"><span></span></button>
-    <button class="color color-3" id="btn3" data-id="3"><span></span></button>
-    <button class="color color-4" id="btn4" data-id="4"><span></span></button>
-    <button class="color color-5" id="btn5" data-id="5"><span></span></button>
-    <button class="color color-6" id="btn6" data-id="6"><span></span></button>
-    <button class="color color-7" id="btn7" data-id="7"><span></span></button>
-    <button class="settings" onclick="settingsBox.hidden = !settingsBox.hidden" id="btnSettings">
-     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20"><path fill="none" d="M0 0h20v20H0V0z"/><path d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/></svg>
-    </button>
+    <div class="spacer"></div>
+    <div class="keyboard">
+      <button class="color color-0" id="btn0" data-id="0"><span></span></button>
+      <button class="color color-1" id="btn1" data-id="1"><span></span></button>
+      <button class="color color-2" id="btn2" data-id="2"><span></span></button>
+      <button class="color color-3" id="btn3" data-id="3"><span></span></button>
+      <button class="color color-4" id="btn4" data-id="4"><span></span></button>
+      <button class="color color-5" id="btn5" data-id="5"><span></span></button>
+      <button class="color color-6" id="btn6" data-id="6"><span></span></button>
+      <button class="color color-7" id="btn7" data-id="7"><span></span></button>
+    </div>
+    <div class="utility">
+      <button class="settings" id="btnSettings">
+        <img src="assets/img/fontawesome/cog-solid.svg">
+      </button>
+      <button class="fullscreen" id="btnFullscreen">
+        <img src="assets/img/fontawesome/expand-solid.svg">
+      </button>
+    </div>
   </div>
 </div>
