--- a/src/pug/sections/main.html
+++ b/src/pug/sections/main.html
@@ -4,7 +4,11 @@
   <svg id="svg"></svg>
 
   <div class="controls" id="controls">
-    <div class="spacer"></div>
+    <div class="utility-l">
+      <button class="info" id="btnInfo">
+        <img src="assets/img/fontawesome/info-circle-solid.svg">
+      </button>
+    </div>
     <div class="keyboard">
       <button class="color color-0" id="btn0" data-id="0"><span></span></button>
       <button class="color color-1" id="btn1" data-id="1"><span></span></button>
@@ -15,7 +19,7 @@
       <button class="color color-6" id="btn6" data-id="6"><span></span></button>
       <button class="color color-7" id="btn7" data-id="7"><span></span></button>
     </div>
-    <div class="utility">
+    <div class="utility-r">
       <button class="settings" id="btnSettings">
         <img src="assets/img/fontawesome/cog-solid.svg">
       </button>
