--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="main">
       <div class="splash">
-  <div class="loading">Loading</div>
+  <div class="loading" data-i18n-field="LOADING"></div>
   <div class="lds-ellipsis">
     <div></div><div></div><div></div>
   </div>
@@ -54,9 +54,9 @@
   </div>
 </div>
       <div class="dialog" id="settingsBox" hidden>
-  <h2>Game Controls</h2>
+  <h2 data-i18n-field="CFG_H_CONTROLS"></h2>
   <p>
-    Number of buttons:
+    <span data-i18n-field="CFG_L_NUM_BUTTONS">Number of buttons:</span>
     <label class="radio">
       <input name="num" type="radio" id="numButtons4">
       <span class="control-indicator"></span>
@@ -68,22 +68,22 @@
       8
     </label>
   </p>
-  <h2>Input Settings</h2>
+  <h2 data-i18n-field="CFG_H_IN_SETTINGS"></h2>
   <p>
     <label class="radio">
-      Current device (computer/phone)
+      <span data-i18n-field="CFG_L_DEVICE"></span>
       <input name="input" type="radio" id="radioDeviceYes" checked>
       <span class="control-indicator"></span>
     </label>
     <br>
     <label class="radio">
-      Makey Makey
+      <span data-i18n-field="CFG_L_IN_MAKEY"></span>
       <input name="input" type="radio" id="radioMakeyYes">
       <span class="control-indicator"></span>
     </label>
     <br>
     <label class="radio">
-      MIDI Input
+      <span data-i18n-field="CFG_L_IN_MIDI"></span>
       <input name="input" type="radio" id="radioMidiInYes">
       <span class="control-indicator"></span>
     </label>
@@ -92,16 +92,16 @@
     </span>
   </p>
 
-  <h2>Audio Output Settings</h2>
+  <h2 data-i18n-field="CFG_H_OUT_SETTINGS"></h2>
   <p>
     <label class="radio">
-      Current device (computer/phone)
+      <span data-i18n-field="CFG_L_DEVICE"></span>
       <input name="output" type="radio" id="radioAudioYes" checked>
       <span class="control-indicator"></span>
     </label>
     <br>
     <label class="radio">
-      MIDI Output
+      <span data-i18n-field="CFG_L_OUT_MIDI"></span>
       <input name="output" type="radio" id="radioMidiOutYes">
       <span class="control-indicator"></span>
     </label>
@@ -110,36 +110,25 @@
     </span>
   </p>
 
-  <p id="midiNotSupported">
-    Unfortunately, this browser does not support WebMIDI, which is only
-    supported in Chrome and Opera.
-  </p>
+  <p id="midiNotSupported" data-i18n-field="CFG_T_MIDI_UNAVAILABLE"></p>
 
-  <button class="splash-button small" onclick="settingsBox.hidden = !settingsBox.hidden">Close</button>
+  <button class="splash-button small" onclick="settingsBox.hidden = !settingsBox.hidden" data-i18n-field="DIALOG_CLOSE"></button>
 </div>
       <div class="dialog info" id="infoBox" hidden>
   <h1>Piano Genie</h1>
   <div class="splash-main">
-    <p>Have some fun pretending you're a piano virtuoso using machine learning!</p>
-    <p>Use the <b>1-8</b> numbered keys on your keyboard (or the home row <b>a-f</b> and <b>j-;</b>) or <b>touch</b> the
-      coloured blocks to play the piano. Use the <b>space bar</b> to control the sustain pedal. The more
-      you pretend you're a real player, the better the melody (and you!) will sound.
-    </p>
+    <p data-i18n-field="INFO_APP_DESC"></p>
+    <p data-i18n-field="INFO_INSTRUCTIONS"></p>
   </div>
-  <p class="built-with">
-    Piano Genie was created by Chris Donahue, Ian Simon and Sander Dieleman and is part of the
-    Google Magenta project.
-    <br><br>
-    Adapted by IMAGINARY for the I AM AI exhibition with the support of the Carl-Zeiss-Foundation.
-  </p>
+  <p class="built-with" data-i18n-field="INFO_CREDITS"></p>
 
-  <button class="splash-button small" onclick="infoBox.hidden = !infoBox.hidden">Close</button>
+  <button class="splash-button small" onclick="infoBox.hidden = !infoBox.hidden" data-i18n-field="DIALOG_CLOSE"></button>
 </div>
 
     </div>
     <script type="text/javascript" src="vendor/magenta/music-1.3.1.js"></script>
     <script type="text/javascript" src="vendor/i18n4js/i18n4js-1.3.1.min.js"></script>
     <script type="text/javascript" src="assets/js/dependencies.min.js"></script>
-    <script type="text/javascript" src="assets/js/bundle.min.js"></script>
+    <script type="text/javascript" src="assets/js/bundle.min.js?v=2"></script>
   </body>
 </html>
