--- a/src/pug/sections/info.html
+++ b/src/pug/sections/info.html
@@ -1,18 +1,10 @@
 <div class="dialog info" id="infoBox" hidden>
   <h1>Piano Genie</h1>
   <div class="splash-main">
-    <p>Have some fun pretending you're a piano virtuoso using machine learning!</p>
-    <p>Use the <b>1-8</b> numbered keys on your keyboard (or the home row <b>a-f</b> and <b>j-;</b>) or <b>touch</b> the
-      coloured blocks to play the piano. Use the <b>space bar</b> to control the sustain pedal. The more
-      you pretend you're a real player, the better the melody (and you!) will sound.
-    </p>
+    <p data-i18n-field="INFO_APP_DESC"></p>
+    <p data-i18n-field="INFO_INSTRUCTIONS"></p>
   </div>
-  <p class="built-with">
-    Piano Genie was created by Chris Donahue, Ian Simon and Sander Dieleman and is part of the
-    Google Magenta project.
-    <br><br>
-    Adapted by IMAGINARY for the I AM AI exhibition with the support of the Carl-Zeiss-Foundation.
-  </p>
+  <p class="built-with" data-i18n-field="INFO_CREDITS"></p>
 
-  <button class="splash-button small" onclick="infoBox.hidden = !infoBox.hidden">Close</button>
+  <button class="splash-button small" onclick="infoBox.hidden = !infoBox.hidden" data-i18n-field="DIALOG_CLOSE"></button>
 </div>
