--- a/src/pug/sections/loader.html
+++ b/src/pug/sections/loader.html
@@ -1,5 +1,5 @@
 <div class="splash">
-  <div class="loading">Loading</div>
+  <div class="loading" data-i18n-field="LOADING"></div>
   <div class="lds-ellipsis">
     <div></div><div></div><div></div>
   </div>
