Add embed mode. In embed mode the user is told to click on the window if it doesn't have focus, so keyboard input will work.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </button>
     </div>
   </div>
+  <div class="embed-focus-tip" data-i18n-field="CLICK_HERE_KEYBOARD"></div>
 </div>
       <div class="dialog" id="settingsBox" hidden>
   <h2 data-i18n-field="CFG_H_CONTROLS"></h2>
