--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Have fun playing piano like a virtuoso with the help of machine learning!">
     <meta property="og:description" content="Have fun playing piano like a virtuoso with the help of machine learning!">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <link rel="stylesheet" href="assets/css/default.css">
+    <link rel="stylesheet" href="assets/css/default.css?v=2">
     <title>Piano Genie
     </title>
   </head>
@@ -130,6 +130,6 @@
     <script type="text/javascript" src="vendor/magenta/music-1.3.1.js"></script>
     <script type="text/javascript" src="vendor/i18n4js/i18n4js-1.3.1.min.js"></script>
     <script type="text/javascript" src="assets/js/dependencies.min.js"></script>
-    <script type="text/javascript" src="assets/js/bundle.min.js?v=2"></script>
+    <script type="text/javascript" src="assets/js/bundle.min.js?v=3"></script>
   </body>
 </html>
