Fix touch input playing notes twice and sometimes getting stuck
The fix is implemented by switching the input system from mouse and
touch events over to pointer events which present a unified view on all
pointer based input devices. Mouse input, single touch and multi touch
now works properly. For older browsers, a polyfill has been added.

However, swiping over the buttons using touch input will only trigger
the button where the initial touch happened, because touch events for
pointers are always bound to that initial element.

A possible solution would be to bind the pointer events to the whole
button panel and compute the button below the pointer location
ourselves.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Piano Genie
     </title>
   </head>
-  <body>
+  <body touch-action="none">
     <div class="main">
       <div class="splash">
   <div class="loading" data-i18n-field="LOADING"></div>
